<resources>
    <string name="app_name">Testing Input Dialog</string>
    <string name="text_launch_dialog">launch dialog</string>
    <string name="text_enter_name">Enter name</string>
    <string name="text_ok">OK</string>

</resources>